--- a/content/themes/firma/partials/major-partners-badge.hbs
+++ b/content/themes/firma/partials/major-partners-badge.hbs
@@ -7,5 +7,6 @@
     {{/if}}">
     <a href="{{@site.url}}/national-science-foundation/" class="f-major-partners-badge__icon f-major-partners-badge__icon_nsf">
     </a>
-
+    <a href="{{@site.url}}/national-science-foundation/" class="f-major-partners-badge__icon f-major-partners-badge__icon_nsftext">
+    </a>
 </div>
