Fix spacing of author block in medium media query

--- a/content/themes/firma/assets/css/app.css
+++ b/content/themes/firma/assets/css/app.css
@@ -1820,7 +1820,8 @@ f-desktop-navigation__list > div > a, .f-desktop-navigation__list li > a.nav-no-
 @media only screen and (min-width: 48rem) {
     .f-standard-container {
         padding-top: 6.25rem;
-        padding-bottom: 9.375rem
+        padding-bottom: 9.375rem;
+        padding-left: 3.2rem;
     }
 }
 
