Update disclaimer link to new separate page

--- a/content/themes/firma/partials/footer.hbs
+++ b/content/themes/firma/partials/footer.hbs
@@ -53,7 +53,7 @@
                             <a href="/tos">Terms of Service</a>
                         </li>
                         <li>
-                            <a href="/tos/#disclaimer">Disclaimers</a>
+                            <a href="/disclaimer">Disclaimers</a>
                         </li>
                     </ul>
                 </nav>
