--- a/content/themes/firma/partials/hero2.hbs
+++ b/content/themes/firma/partials/hero2.hbs
@@ -14,7 +14,7 @@
                     <p class="f-hero__description">{{@site.description}}</p>
                 {{/if}}
                 <a
-                        href="{{@site.url}}/#early-access"
+                        href="/#early-access"
                         class="f-button__hero f-button"
                 >
                     {{t "Get early access"}}
