--- a/content/themes/firma/partials/logo.hbs
+++ b/content/themes/firma/partials/logo.hbs
@@ -3,7 +3,7 @@
 --}}
 
 <a
-  href="{{@site.url}}"
+  href="/"
   class="f-logo {{logo_class}} {{^if @site.logo}} no-logo {{/if}}"
   title="{{@site.title}}"
 >
