--- a/content/themes/firma/partials/major-partners-badge.hbs
+++ b/content/themes/firma/partials/major-partners-badge.hbs
@@ -5,8 +5,8 @@
     {{else}}
         f-major-partners-badge__container_footer
     {{/if}}">
-    <a href="{{@site.url}}/national-science-foundation/" class="f-major-partners-badge__icon f-major-partners-badge__icon_nsf">
+    <a href="/national-science-foundation/" class="f-major-partners-badge__icon f-major-partners-badge__icon_nsf">
     </a>
-    <a href="{{@site.url}}/national-science-foundation/" class="f-major-partners-badge__icon f-major-partners-badge__icon_nsftext">
+    <a href="/national-science-foundation/" class="f-major-partners-badge__icon f-major-partners-badge__icon_nsftext">
     </a>
 </div>
