--- a/content/themes/firma/partials/mobile-menu.hbs
+++ b/content/themes/firma/partials/mobile-menu.hbs
@@ -28,7 +28,7 @@
         {{#if @site.navigation}}
         <div class="f-mobile-menu__nav-section">
             <a
-                    href="{{@site.url}}/#early-access"
+                    href="/#early-access"
                     class="f-button in-desktop-top-bar"
                     @click="closeMenu"
             >
