--- a/content/themes/firma/error-404.hbs
+++ b/content/themes/firma/error-404.hbs
@@ -30,7 +30,7 @@ into the {body} of the default.hbs template --}}
         <p class="f-404-content__subtitle">
           {{t "Page not found. Unfortunately the page you were looking for could not be found."}}
         </p>
-        <a href="{{@site.url}}" class="f-button primary">
+        <a href="/" class="f-button primary">
           {{t "Go to homepage"}}
           <span class="icon-chevron-right" aria-hidden="true"></span>
         </a>
