--- a/content/themes/firma/partials/desktop-menu.hbs
+++ b/content/themes/firma/partials/desktop-menu.hbs
@@ -87,7 +87,7 @@
           class="horizontal-centered-items"
         >
             <a
-                    href="{{@site.url}}/#early-access"
+                    href="/#early-access"
                     class="f-button in-desktop-top-bar"
             >
                 {{t "Get Early Access"}}
