--- a/themes/firma/index.hbs
+++ b/themes/firma/index.hbs
@@ -37,19 +37,18 @@ into the {body} of the default.hbs template --}}
             <div class="landing-double-block landing-reverse-wrap">
                 <div class="landing-block__image landing-block__right landing-emails-image"></div>
                 <div class="landing-block__text landing-block__left">
-                    <h4 class="landing-block__subtitle">Email integration reduces digital fatigue</h4>
+                    <h4 class="landing-block__subtitle">End reply-alls with email integration </h4>
                     <p class="landing-block__paragraph">
-                        Don’t make your community members sign up for yet another digital tool. Conversations on Socialroots integrate seamlessly with email, keeping everyone on the same page, even if they're not on the same platform.
+                        Don’t make your collaborators sign in to yet another digital tool. Conversations on Socialroots integrate seamlessly with email, keeping everyone on the same page.
                     </p>
                 </div>
             </div>
             <div class="landing-double-block landing-wrap landing-white-background">
                 <div class="landing-block__image landing-connections-image landing-block__left"></div>
                 <div class="landing-block__text landing-block__right">
-                    <h4 class="landing-block__subtitle">Connections allow collaboration across networks</h4>
+                    <h4 class="landing-block__subtitle">De-silo collaboration across your ecosystem</h4>
                     <p class="landing-block__paragraph">
-                        We can’t solve big problems in a vacuum. Socialroots allows your organization to connect with other aligned groups so you can see your whole network, collaborate directly, and maximize your impact.
-
+                        We can’t solve big problems in a vacuum. Socialroots allows your organization to connect with other aligned groups so you can collaborate across teams, departments, and organizations.
                     </p>
                 </div>
             </div>
@@ -58,16 +57,16 @@ into the {body} of the default.hbs template --}}
                 <div class="landing-block__text landing-block__left">
                     <h4 class="landing-block__subtitle">Socialroots’ conversations promote aligned action</h4>
                     <p class="landing-block__paragraph">
-                        Socialroots allows people to commit to action and give updates within the natural flow of a conversation. Next steps are flagged and tracked when and where the conversation happens, instead of getting lost in email threads and task boards.
+                        Socialroots allows people to commit to action and give updates within the natural flow of a conversation, instead of getting lost in email threads and task boards.
                     </p>
                 </div>
             </div>
             <div class="landing-double-block landing-wrap landing-white-background">
                 <div class="landing-block__image landing-onboarding-image landing-block__left"></div>
                 <div class="landing-block__text landing-block__right">
-                    <h4 class="landing-block__subtitle">Smart onboarding makes orientation easy</h4>
+                    <h4 class="landing-block__subtitle">Show clear, quantifiable metrics to stakeholders</h4>
                     <p class="landing-block__paragraph">
-                        Your onboarding choices aren’t limited to “generic but unhelpful” or “personalized but time-consuming.” Socialroots welcomes new group members with information and options that are relevant to them, saving you time and helping them to get oriented right away.
+                        Showing the value of coordination work is hard. With Socialroots’ innovative network health and impact metrics, you can see the needs of collaborators and communicate progress to   stakeholders more easily.
                     </p>
                 </div>
             </div>
