--- a/themes/firma/partials/desktop-menu.hbs
+++ b/themes/firma/partials/desktop-menu.hbs
@@ -35,8 +35,8 @@
                             </a>
                         </li>
                         <li class="nav-our-cooperative{{#if current}} nav-current{{/if}}">
-                            <a href="/our-cooperative">
-                                <span>{{t "Cooperative"}}</span>
+                            <a href="/cooperative-practice">
+                                <span>{{t "Cooperative Practice"}}</span>
                             </a>
                         </li>
                         <li class="nav-team{{#if current}} nav-current{{/if}}">
@@ -87,7 +87,7 @@
           class="horizontal-centered-items"
         >
             <a
-                    href="{{@site.url}}/#early-access"
+                    href="{{@site.url}}/signup"
                     class="f-button in-desktop-top-bar"
             >
                 {{t "Get Early Access"}}
