--- a/themes/firma/partials/landing-foursquare.hbs
+++ b/themes/firma/partials/landing-foursquare.hbs
@@ -1,32 +1,32 @@
 <section class="landing-section-foursquare">
-<h3 class="landing-section-title">The collaboration space your community's been waiting for!</h3>
+<h3 class="landing-section-title">SaaS Solution for De-Siloing Communication Across Groups</h3>
 <div class="landing-foursquare">
     <div class="l-foursquare landing-foursquare__top-left">
         <div class="landing-icon landing-compass-icon"></div>
-        <h5 class="landing-foursquare__subtitle">Understand & Navigate Your Network</h5>
+        <h5 class="landing-foursquare__subtitle">Insight Into Your Ecosystem </h5>
         <p class="landing-foursquare__paragraph">
-            Whether you have a small community focused on learning, or a vast network dedicated to taking action, Socialroots can help you to understand the shape of your network, see what’s happening in other groups you’re connected with, and discover other people and organizations with aligned values and goals.
+            Socialroots empowers you with key metrics, providing a clear, quantifiable snapshot of your accomplishments.
         </p>
     </div>
     <div class="l-foursquare landing-foursquare__top-right">
         <div class="landing-icon landing-conversation-icon"></div>
-        <h5 class="landing-foursquare__subtitle">Balance Relationship Building & Action</h5>
+        <h5 class="landing-foursquare__subtitle">Streamline and De-Silo Communication</h5>
         <p class="landing-foursquare__paragraph">
-            Cultivating relationships is just as important as taking action, but it can be overwhelming to balance the two. Not anymore. Socialroots reduces noise by streamlining communications and cuts across silos by giving groups a space of their own, while keeping them connected with their whole network. This is how we get work done, together.
+            Socialroots ensures smooth coordination across various organizations, departments and projects.
         </p>
     </div>
     <div class="l-foursquare landing-foursquare__bottom-left">
         <div class="landing-icon landing-arrows-up-icon"></div>
-        <h5 class="landing-foursquare__subtitle">Engage & Align Your Group</h5>
+        <h5 class="landing-foursquare__subtitle">Email Integrated Conversations Increase Engagement</h5>
         <p class="landing-foursquare__paragraph">
-            If you’re struggling for engagement because everyone’s working in silos, or you’re frustrated by AI algorithms that prevent you from building a shared understanding, we can help. Socialroots helps your group to organize without silos and work in a shared reality, so everyone can see what’s happening. And by connecting it all back to your purpose, everyone can see why.
+            Conversations on Socialroots are integrated with Email, allowing greater engagement and no reply-alls!
         </p>
     </div>
     <div class="l-foursquare landing-foursquare__bottom-right">
         <div class="landing-icon landing-checklist-icon"></div>
-        <h5 class="landing-foursquare__subtitle">Spend Less Time on Logistics</h5>
+        <h5 class="landing-foursquare__subtitle">Decrease Noise and Increase Action</h5>
         <p class="landing-foursquare__paragraph">
-            Community organizers spend a lot of time keeping track of who’s doing what and when. Socialroots allows coordination to happen naturally so you and your team spend less time scheduling and checking in, and more time learning, collaborating, and achieving your community’s goals.
+            Stop managing your conversations and projects in jumbled email threads, spreadsheets, and heavy task-tracking tools. See and share action items across all of your groups in one place.
         </p>
     </div>
 </div>
