--- a/themes/firma/partials/footer.hbs
+++ b/themes/firma/partials/footer.hbs
@@ -11,8 +11,7 @@
                 </div>
             </div>
             <div class="f-footer__company-message">
-                <p>We are a worker-owned software cooperative building a data commons that enables you to network,
-                    collaborate, and effectively communicate across groups.</p>
+                <p></p>
             </div>
             <div style="margin-left:5%;" class="f-footer__nav-container">
                 <nav
@@ -25,9 +24,6 @@
                     {{t "Who we are"}}
                 </span>
                     <ul class="f-footer-navigation__list">
-                        <li>
-                            <a href="/we-are-socialroots">Story</a>
-                        </li>
                         <li>
                             <a href="/principles">Principles</a>
                         </li>
@@ -93,7 +89,7 @@
         </div>
         <div style="display:flex;flex-direction:row;justify-content: center;align-items: center">
             <div class="f-footer__copyright-container">
-                <p class="f-footer-copyright">Wicked Coop, LCA &copy; {{date format="YYYY"}}
+                <p class="f-footer-copyright">Wicked Labs Inc. &copy; {{date format="YYYY"}}
                 </p>
             </div>
         </div>
