--- a/themes/firma/partials/sendinblue-form.hbs
+++ b/themes/firma/partials/sendinblue-form.hbs
@@ -5,93 +5,16 @@
 <section class="landing-early-access-block" id="early-access">
     <h3 class="landing-section-title">Lower the cost of cross-group coordination.</h3>
     <p class="landing-section-big-message">Sign up for early access.</p>
-    <a
-        href="{{@site.url}}/signup"
-        style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#085229; background-color:#e7faf0; border-radius:3px; border-color:#13ce66;max-width:540px;"
-    >
-        {{t "Get early access"}}
-        <span class="icon-arrow-right f-hero_" aria-hidden="true"></span>
-    </a>
-
-        <!--    <div class="sib-form" style="padding:0; margin:0;">-->
-<!--    <div id="sib-form-container" class="sib-form-container landing-early-access-sign-up-form">-->
-<!--        <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:540px;">-->
-<!--            <div class="sib-form-message-panel__text sib-form-message-panel__text--center">-->
-<!--                <svg viewBox="0 0 512 512" class="sib-icon sib-notification__icon">-->
-<!--                    <path d="M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z"-->
-<!--                    />-->
-<!--                </svg>-->
-<!--                <span class="sib-form-message-panel__inner-text">-->
-<!--                          Your sign up could not be saved. Please try again.-->
-<!--                      </span>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div></div>-->
-<!--        <div id="success-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#085229; background-color:#e7faf0; border-radius:3px; border-color:#13ce66;max-width:540px;">-->
-<!--            <div class="sib-form-message-panel__text sib-form-message-panel__text--center">-->
-<!--                <svg viewBox="0 0 512 512" class="sib-icon sib-notification__icon">-->
-<!--                    <path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z"-->
-<!--                    />-->
-<!--                </svg>-->
-<!--                <span class="sib-form-message-panel__inner-text">-->
-<!--                          Your submission has been successful. Thank you.-->
-<!--                      </span>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div></div>-->
-<!--        <div id="sib-container" class="sib-container--large sib-container--vertical" style="display: flex; flex-direction:row; justify-content:center; background-color:transparent;">-->
-<!--            <form id="sib-form"-->
-<!--                  method="POST"-->
-<!--                  {{#if staging}}-->
-<!--                  action="https://5332f985.sibforms.com/serve/MUIEAGlnfnj5G5jnnFSk2Fu-G8yvYqvyvnAZPPSsQdnd_8_wJ3WQMKVom-7_ZpK81-h3FraKgNpBEGpcNGTwP3GtwqIHBkzQ6SdMGaHp6qYPcnpA412YtdsUnjTt8buG7iIiWiVwbmeuyqjK0WkAJgLwmE50s15uCQcz9IgKKfVH2SwX0gtAZzS3hskUs9DouIu5HNgefzLrTX7K"-->
-<!--                  {{else}}-->
-<!--                  action="https://5332f985.sibforms.com/serve/MUIEACoTeyrOrhldgDE-Kft61xVOaqfpWJ4qMfkOTMpBa0S3VOhzP1JKHFXIXeEj0Hr97O9tOkpSCuEbym2oyFmrh2A58fjG30WPkFAjgVJP_8cni8bmVOmOd0pezXA-UHAeKT3uBQc_IJgZDpfIpoi7LHoq1oxuHUvZT27iQsMIUGTDAdAQ0n0MpxcSAUpqbRgWlqlistKbHzvl"-->
-<!--                  {{/if}}-->
-<!--                  data-type="subscription"-->
-<!--                  style="display: flex;flex-direction: row;flex-wrap: wrap">-->
-<!--                <div class="sib-input sib-form-block">-->
-<!--                    <div class="form__entry entry_block">-->
-<!--                        <div class="form__label-row ">-->
-<!--                            <div class="entry__field">-->
-<!--                                <input class="landing-early-access-email input" type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="you@example.com" data-required="true" required style="width:100%; color:#000000;" />-->
-<!--                            </div>-->
-<!--                        </div>-->
-
-<!--                        <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">-->
-<!--                        </label>-->
-<!--                    </div>-->
-<!--                    <div class="form__entry entry_block">-->
-<!--                        <div class="form__label-row ">-->
-<!--                            <script>-->
-<!--                                function handleCaptchaResponse() {-->
-<!--                                    var event = new Event('captchaChange');-->
-<!--                                    document.getElementById('sib-captcha').dispatchEvent(event);-->
-<!--                                }-->
-<!--                            </script>-->
-<!--                            <div class="g-recaptcha sib-visible-recaptcha" id="sib-captcha" data-sitekey="{{#if staging}}6Lfl2wofAAAAAMpE_d-IGqlaEMUBiPKoB40GNPVl{{else}}6Lf7h2kaAAAAADSROJl1YqZNVCV4JMIYIMkIueww{{/if}}" data-callback="handleCaptchaResponse"></div>-->
-<!--                        </div>-->
-<!--                        <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">-->
-<!--                        </label>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <div class="sib-form-block" style="text-align: right">-->
-<!--                    <button class="f-button__early-access f-button sib-form-block__button sib-form-block__button-with-loader"-->
-<!--                            form="sib-form" type="submit" style="margin-top: 2%;">-->
-<!--                        <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512">-->
-<!--                            <path d="M460.116 373.846l-20.823-12.022c-5.541-3.199-7.54-10.159-4.663-15.874 30.137-59.886 28.343-131.652-5.386-189.946-33.641-58.394-94.896-95.833-161.827-99.676C261.028 55.961 256 50.751 256 44.352V20.309c0-6.904 5.808-12.337 12.703-11.982 83.556 4.306 160.163 50.864 202.11 123.677 42.063 72.696 44.079 162.316 6.031 236.832-3.14 6.148-10.75 8.461-16.728 5.01z"-->
-<!--                            />-->
-<!--                        </svg>-->
-<!--                            {{t "Get early access"}}-->
-<!--                            <span class="icon-arrow-right f-hero_" aria-hidden="true"></span>-->
-<!--                    </button>-->
-<!--                </div>-->
-<!--                <input type="text" name="email_address_check" value="" class="input--hidden">-->
-<!--                <input type="hidden" name="locale" value="en">-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+    <span class="landing-early-access-sign-up-form">
+        <a
+            href="{{@site.url}}/signup"
+            class="f-button__early-access"
+        >
+            <span class="landing-early-access-email">
+                {{t "Get early access"}}
+                <span class="icon-arrow-right f-hero_" style="margin-left:2px;" aria-hidden="true"></span>
+            </span>
+        </a>
 </section>
 <script src="https://sibforms.com/forms/end-form/build/main.js"></script>
 <script src="https://www.google.com/recaptcha/api.js?hl=en"></script>
